Fix (graphics) : Memory leak from Indexed color space.

DETAILS :

Bug 689822 "Memory leaks during rendering clist."

The finalize function doesn't release 'table,
which is allocated when use_proc == 1.

Minor change : improved a debug printing in gsmchunk.c :
A meanful name is better than an unknown address.

EXPECTED DIFFERENCES :

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8928 a1074d23-0009-0410-80fe-cf8c14f379e6